After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741980 - Control-click to toggle a selected file with extant selection doesn't work
Control-click to toggle a selected file with extant selection doesn't work
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.3.x
Other Linux
: Normal normal
: 2.2
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-12-26 03:54 UTC by J.B. Nicholson
Modified: 2014-12-26 23:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description J.B. Nicholson 2014-12-26 03:54:51 UTC
I'm testing this with GNU/Linux but I'm pretty sure that this is reproducible on any OS.

I thought I used to control-click a single file to toggle its selection, even when there were other files selected. But now I can't do that.

What you need to reproduce this bug: a folder with multiple EasyTAG-modifiable files (I used a folder of a few dozen FLAC files but the number of files doesn't really matter so long as you have at least 2)

Steps to reproduce the bug:
1. Open EasyTAG on the folder of files and select some of the files in any way you wish.
2. Control-click on a file to toggle its inclusion in the set of selected files. Depending on which file you control-clicked one of two things will happen:

Control-clicking an unselected file: will add that file to the selection (this is correct behavior).
Control-clicking a selected file: will not remove that file from the selection (this strikes me as incorrect behavior).

I expected control-clicking to always toggle the control-clicked file's selection status regardless of what else was in the selection set. To see the behavior I expected, unselect all selected files and control-click a single file.
Comment 1 David King 2014-12-26 09:46:52 UTC
This is fallout from the selection changes in bug 740134.
Comment 2 David King 2014-12-26 23:00:55 UTC
Fixed on master and easytag-2-2 branches as fad2eca29ba532fc386bb5a421169e31dbb9eff2 and ca1e78be6d58d15e89c5fa0f69352df717d3d713. Thanks for the bug report!