Fix Ctrl-clicking to toggle file selection

In the selection changed handler, only change the current file shown in
the file and tag areas if it is selected. When unselecting, do not
update the current file.

https://bugzilla.gnome.org/show_bug.cgi?id=741980